--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -47,7 +47,7 @@ outputs:
       run:
         - python >={{ python_min }},<{{ python_over }}
         - apache-airflow-task-sdk <1.1.0,>=1.0.0
-        - apache-airflow-core ==3.0.1
+        - apache-airflow-core ==3.0.2
 
     test:
       commands:
@@ -161,7 +161,8 @@ outputs:
         - apache-airflow-providers-edge3 >=1.0.0
         - apache-airflow-providers-elasticsearch >=5.5.2
         - apache-airflow-providers-exasol >=4.6.1
-        - apache-airflow-providers-fab >=2.0.2
+        # circular dependency
+        # - apache-airflow-providers-fab >=2.2.0
         - apache-airflow-providers-facebook >=3.7.0
         - apache-airflow-providers-ftp >=3.12.0
         - apache-airflow-providers-git >=0.0.2
@@ -191,9 +192,7 @@ outputs:
         - apache-airflow-providers-pagerduty >=3.8.1
         - apache-airflow-providers-papermill >=3.8.2
         - apache-airflow-providers-pgvector >=1.4.0
-        # must be excluded until we have a newer pinecone
-        # that can be installed with yandexcloud
-        # - apache-airflow-providers-pinecone >=2.1.1
+        - apache-airflow-providers-pinecone >=2.1.1
         - apache-airflow-providers-postgres >=5.13.1
         - apache-airflow-providers-presto >=5.7.0
         - apache-airflow-providers-qdrant >=1.3.0
