--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,12 +42,12 @@ outputs:
         - smmap ==5.0.2
         # for all python (not just py < 3.11) so we can stay noarch: python
         - tomli ==2.2.1
-        - trove-classifiers ==2025.4.11.15
+        - trove-classifiers ==2025.5.9.12
         - pip
       run:
         - python >={{ python_min }},<{{ python_over }}
         - apache-airflow-task-sdk <1.1.0,>=1.0.0
-        - apache-airflow-core ==3.0.2
+        - apache-airflow-core ==3.0.3
 
     test:
       commands:
@@ -161,8 +161,8 @@ outputs:
         - apache-airflow-providers-edge3 >=1.0.0
         - apache-airflow-providers-elasticsearch >=5.5.2
         - apache-airflow-providers-exasol >=4.6.1
-        # circular dependency
-        # - apache-airflow-providers-fab >=2.2.0
+        # circular dependency, but let's try it...
+        - apache-airflow-providers-fab >=2.2.0
         - apache-airflow-providers-facebook >=3.7.0
         - apache-airflow-providers-ftp >=3.12.0
         - apache-airflow-providers-git >=0.0.2
@@ -185,15 +185,14 @@ outputs:
         - apache-airflow-providers-odbc >=4.8.0
         - apache-airflow-providers-openai >=1.5.0
         - apache-airflow-providers-openfaas >=3.7.0
-        - apache-airflow-providers-openlineage >=2.1.3
+        - apache-airflow-providers-openlineage >=2.3.0
         - apache-airflow-providers-opensearch >=1.5.0
         - apache-airflow-providers-opsgenie >=5.8.0
         - apache-airflow-providers-oracle >=3.12.0
         - apache-airflow-providers-pagerduty >=3.8.1
         - apache-airflow-providers-papermill >=3.8.2
         - apache-airflow-providers-pgvector >=1.4.0
-        # run_constrained on protobuf in pinecone is causing conflicts
-        # - apache-airflow-providers-pinecone >=2.1.1
+        - apache-airflow-providers-pinecone >=2.1.1
         - apache-airflow-providers-postgres >=5.13.1
         - apache-airflow-providers-presto >=5.7.0
         - apache-airflow-providers-qdrant >=1.3.0
