--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -191,7 +191,8 @@ outputs:
         - apache-airflow-providers-pagerduty >=3.8.1
         - apache-airflow-providers-papermill >=3.8.2
         - apache-airflow-providers-pgvector >=1.4.0
-        - apache-airflow-providers-pinecone >=2.1.1
+        # currently not solvable when apache-airflow-providers-pinecone is included
+        # - apache-airflow-providers-pinecone >=2.1.1
         - apache-airflow-providers-postgres >=5.13.1
         - apache-airflow-providers-presto >=5.7.0
         - apache-airflow-providers-qdrant >=1.3.0
