--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -41,9 +41,8 @@ outputs:
         - pip
       run:
         - python >={{ python_min }},<{{ python_over }}
-        - apache-airflow-task-sdk ==1.1.0
+        - apache-airflow-task-sdk >=1.1.1
         - apache-airflow-core =={{ version }}
-        - natsort >=8.4.0
 
     test:
       commands:
