Update license_file to include NOTICE

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -240,7 +240,9 @@ outputs:
 about:
   home: http://airflow.apache.org
   license: Apache-2.0
-  license_file: LICENSE
+  license_file: 
+    - LICENSE
+    - NOTICE
   summary: |
     Airflow is a platform to programmatically author, schedule and monitor
     workflows
