--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -174,7 +174,8 @@ outputs:
         - apache-airflow-providers-ftp >=3.12.0
         - apache-airflow-providers-git >=0.0.2
         - apache-airflow-providers-github >=2.8.0
-        - apache-airflow-providers-google >=10.24.0
+        # doesn't work with uvicorn >=0.37.0 (dependency of apache-airflow-core)
+        # - apache-airflow-providers-google >=10.24.0
         - apache-airflow-providers-grpc >=3.7.0
         - apache-airflow-providers-hashicorp >=4.0.0
         - apache-airflow-providers-http >=4.13.2
