Update trove-classifiers version in meta.yaml
Updated trove-classifiers version to 2025.5.1.12 and added a comment about the previous version.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -46,7 +46,8 @@ outputs:
         - pluggy ==1.5.0
         - smmap ==5.0.2
         - tomli ==2.2.1  # [py<311]
-        - trove-classifiers ==2025.4.28.22
+        # 2025.4.28.22 was not built on conda-forge
+        - trove-classifiers ==2025.5.1.12
         - pip
       run:
         - python
